--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -13,3 +13,9 @@
   background-color: rgb(160, 190, 160);
   padding: 1rem;
 }
+
+.weather-icon {
+  background-color: antiquewhite;
+  padding: 2px;
+  border-radius: 55%;
+}
